--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -1,3 +1,72 @@
-#login{
-  background: green;
+#login-box{
+  height: 100%;
+  background: #d6e9ff;
+  position: relative;
+  .login{
+    width: 1100px;
+    height: 700px;
+    background-color: #fff;
+    border-radius: 15px;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    .left{
+      width: 550px;
+      height: 100%;
+      background: url('~@a/images/1.png') no-repeat;
+      background-size: cover;
+      h1{
+
+        color: #fff;
+        text-align: center;
+        line-height: 700px;
+        font-size: 32px;
+        font-weight: normal;
+      }
+    }
+    .right{
+      width: 530px;
+      height: 100%;
+      position: relative;
+      .form-box{
+        width: 350px;
+        height: 300px;
+        margin: auto;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        font-size: 14px;
+        h1{
+          width: 100px;
+          margin: 0 auto;
+          margin-bottom: 30px;
+          text-align: center;
+          font-size: 20px;
+          line-height: 36px;
+          border-bottom: 2px solid #3a62d7;
+        }
+        button{
+          width: 100%;
+        }
+        .el-input__inner{
+          border-top: none;
+          border-right: none;
+          border-left: none;
+          border-radius: 0px;
+        }
+        .el-form-item{
+          margin-bottom: 25px;
+          &:nth-child(3){
+            margin-bottom: 10px;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
 }
