--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -42,13 +42,14 @@
         bottom: 0;
         font-size: 14px;
         h1{
-          width: 100px;
+          width: 150px;
           margin: 0 auto;
           margin-bottom: 30px;
           text-align: center;
-          font-size: 20px;
-          line-height: 36px;
+          font-size: 24px;
+          line-height: 48px;
           border-bottom: 2px solid #3a62d7;
+          letter-spacing: 10px;
         }
         button{
           width: 100%;
