--- a/src/views/user/AddUser.scss
+++ b/src/views/user/AddUser.scss
@@ -1,4 +1,26 @@
 .user-add{
-  height: 100%;
+  min-height: 100%;
+  padding: 10px 20px;
+  border-radius: 5px;
   background: #fff;
+  .user-add-content, .user-add-footer{
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  .user-add-header button{
+    &:last-child{
+      margin-right: 20px;
+    }
+  }
+  .user-add-content .all{
+    padding-top: 0px;
+  }
+  .user-add-footer{
+    text-align: center;
+  }
+  .el-form{
+    width: 1200px;
+    margin: 0 auto;
+  }
 }
