--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -32,6 +32,7 @@ input,
 select,
 textarea {
   font: 12px/1.5tahoma, arial, \5b8b\4f53;
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 html,body{
   height: 100%;
