用户管理静态页完成

--- a/src/views/user/UserList.scss
+++ b/src/views/user/UserList.scss
@@ -1,6 +1,6 @@
 .user-list{
   min-height: 100%;
-  >div{
+  >.user-list-header, .user-list-footer{
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
