--- a/src/views/user/AddUser.scss
+++ b/src/views/user/AddUser.scss
@@ -1,6 +1,6 @@
 .user-add{
   min-height: 100%;
-  padding: 10px 20px;
+  padding: 20px;
   border-radius: 5px;
   background: #fff;
   .user-add-content, .user-add-footer{
