--- a/src/views/course/AddUser.scss
+++ b/src/views/course/AddUser.scss
@@ -24,4 +24,10 @@
     margin: 0 auto;
     padding-top: 20px;
   }
+  .year-ipt {
+    .el-date-editor.el-input,
+    .el-date-editor.el-input__inner {
+      width: 100% !important;
+    }
+  }
 }
